tests/negative/semantic/array_insert_index_bool/input.ci
void main() {
    int[] xs = [1];
    arrayInsert(xs, true, 2);
}
